# PTAM-GPL

./: .gitignore  .gitmodules  README.md  build-package.sh
Src/: CMakeLists.txt  VideoSource_Linux_Gstreamer_File.cc  VideoSource_stub.cc
Src/Calib/: CMakeLists.txt
Src/Demo/: CMakeLists.txt  camera.cfg  example.avi
Src/Lib/: ATANCamera.cc  ATANCamera.h  CMakeLists.txt  GLWindow2.cc  GLWindow2.h  MapMaker.cc  System.cc  Tracker.cc  Tracker.h  VideoSource.h
debian/: changelog  control  copyright  libxcs-ptam-dev.install  libxcs-ptam.install  relativize-symlinks.sh  rules  version.sh
